[gd_scene load_steps=23 format=3 uid="uid://djk0makp5h424"]

[ext_resource type="Script" uid="uid://c6n8gfkkkqwdp" path="res://scenes/world/islands/island.gd" id="1_swhxk"]
[ext_resource type="Script" uid="uid://bb2u2tgh4mohy" path="res://scenes/world/islands/island_data.gd" id="2_qml6h"]
[ext_resource type="Texture2D" uid="uid://dj2bdpn6kiso3" path="res://assets/islands/stone island.png" id="3_swhxk"]
[ext_resource type="Texture2D" uid="uid://cu45k5rss66ku" path="res://assets/buildings/bridge 1.png" id="4_0ga1g"]
[ext_resource type="Texture2D" uid="uid://driblg3mu6ha2" path="res://assets/buildings/bridge 2.png" id="5_sk8yt"]
[ext_resource type="Texture2D" uid="uid://dqa2fdarkmrcv" path="res://assets/buildings/bridge 3.png" id="6_8vpng"]
[ext_resource type="Texture2D" uid="uid://dutpth223cgod" path="res://assets/buildings/bridge 4.png" id="7_ojokv"]
[ext_resource type="Texture2D" uid="uid://b2rh52mf5ogwa" path="res://assets/buildings/bridge 5.png" id="8_jgalt"]
[ext_resource type="Texture2D" uid="uid://cketal843l4vr" path="res://assets/buildings/bridge 6.png" id="9_tsuig"]
[ext_resource type="Texture2D" uid="uid://d2g2haiypnote" path="res://assets/buildings/flag_neutral.png" id="10_sd8ak"]
[ext_resource type="PackedScene" uid="uid://balv6egn28qqq" path="res://scenes/ui/gui/other_elements/CustomProgressBar.tscn" id="11_wvh4n"]
[ext_resource type="Texture2D" uid="uid://6dnjfx3mt3cu" path="res://assets/icons/building limit.png" id="12_i5kjb"]
[ext_resource type="Texture2D" uid="uid://cu47poko5g5im" path="res://assets/resources/stone.png" id="13_qmv15"]

[sub_resource type="Resource" id="Resource_0yff4"]
script = ExtResource("2_qml6h")
metadata/_custom_type_script = "uid://bb2u2tgh4mohy"

[sub_resource type="NavigationPolygon" id="NavigationPolygon_s2qvn"]
vertices = PackedVector2Array(79.9531, -1058.31, 163.367, -1012.25, 163.094, -1012.4, 366.578, 556.297, 149.539, 611.313, 149.648, 611.281, -901.477, 443.633, -958.188, 424.719, -1162.7, 323.461, -1226.45, 275.398, -1362.95, 138.898, -1360.02, -152.547, -1249.9, -368.852, -1033.04, -566.891, -901.398, -645.094, -606.367, 567.68, -845.523, -669.008, -31.3984, 655.047, -128.727, 658.977, -313.797, 641.07, -476.43, 618.258, -596.273, -775.711, -446.32, -831.07, 598.867, 499.469, -315.461, -922.672, -229.008, -977.328, -163.352, -1015.13, -84.0391, -1051.4, 2.32813, -1067.88, 502.859, -810.602, 887.797, 380.906, 1180.06, 137.789, 1036.33, 281.523, 952.578, 347.539, 600.281, -788.359, 901.297, -685.359, 1359.56, -159.359, 1097.66, -642.047, 1419.95, -390.563, 1388.49, -202.773, 1195.85, -637.094, 1288.08, -600.203, 1373.52, -537.094, 1416.13, -468.906)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5), PackedInt32Array(6, 7, 8, 9, 10, 11, 12, 13, 14), PackedInt32Array(15, 6, 14, 16), PackedInt32Array(5, 17, 18, 19, 20, 15, 16, 21, 22, 3), PackedInt32Array(23, 3, 22, 24, 25, 26, 27, 28, 0, 2, 29, 30), PackedInt32Array(31, 32, 33, 30, 29, 34, 35, 36), PackedInt32Array(36, 35, 37), PackedInt32Array(38, 39, 36, 37, 40, 41, 42, 43)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-906, -654, -1039, -575, -1258, -375, -1370, -155, -1373, 143, -1233, 283, -1168, 332, -962, 434, -905, 453, -610, 577, -479, 628, -315, 651, -129, 669, -30, 665, 152, 621, 369, 566, 602, 509, 892, 390, 958, 356, 1043, 289, 1188, 144, 1368, -154, 1398, -199, 1430, -390, 1426, -472, 1381, -544, 1293, -609, 1198, -647, 1099, -652, 904, -695, 603, -798, 506.621, -820, 168.206, -1021, 83.1018, -1068, 2.00245, -1078, -87.1067, -1061, -168, -1024, -234, -986, -321, -931, -451, -840, -600, -785, -849.464, -678.203)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_k8b3u"]
vertices = PackedVector2Array(-150.93, 128.93, -282, 128.063, -282, -153.188, -149.063, -155.789)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-292, -163, -292, 138, -141, 139, -139, -166)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_u22nc"]
vertices = PackedVector2Array(33.9297, -21.3828, 30.1328, 376.563, -260.898, 266.133, -255.203, -143.023)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-265, -158, -271, 273, 40, 391, 44, -28)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_2tewc"]
vertices = PackedVector2Array(254.898, 279.273, -30.2109, 393.32, -36.8984, -68.3516, 248.211, -186.133)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-47, -75, -40, 408, 265, 286, 258, -201)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_p1ha7"]
vertices = PackedVector2Array(356, 138.938, 29.7188, 137.094, 202.648, -147.063, 356, -148.883)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(366, -159, 366, 149, 12, 147, 197, -157)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_r62wl"]
vertices = PackedVector2Array(259.203, -132.023, 263.563, 12.8906, -25.2422, -85.2422, -30.5, -242.297)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(269, -139, 274, 27, -35, -78, -41, -257)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_binnr"]
vertices = PackedVector2Array(23.0938, -70.6406, -259.141, 49.9063, -260.93, -140.258, 25.7813, -255.133)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(36, -270, 33, -64, -269, 65, -271, -147)])

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_swhxk"]
properties/0/path = NodePath(".:progress")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="StoneIsland" type="Sprite2D"]
script = ExtResource("1_swhxk")
building_limit = 3
resources_modifier = {
0: 1.0,
1: 1.0,
2: 1.2,
3: 1.0,
4: 1.0
}
island_data = SubResource("Resource_0yff4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_swhxk")
metadata/_edit_lock_ = true

[node name="Bridges" type="Node2D" parent="."]

[node name="BridgeSW" type="Sprite2D" parent="Bridges"]
unique_name_in_owner = true
texture = ExtResource("4_0ga1g")

[node name="BridgeW" type="Sprite2D" parent="Bridges"]
unique_name_in_owner = true
position = Vector2(-1, 0)
texture = ExtResource("5_sk8yt")

[node name="BridgeNW" type="Sprite2D" parent="Bridges"]
unique_name_in_owner = true
texture = ExtResource("6_8vpng")

[node name="BridgeSE" type="Sprite2D" parent="Bridges"]
unique_name_in_owner = true
texture = ExtResource("7_ojokv")

[node name="BridgeE" type="Sprite2D" parent="Bridges"]
unique_name_in_owner = true
texture = ExtResource("8_jgalt")
offset = Vector2(5, 0)

[node name="BridgeNE" type="Sprite2D" parent="Bridges"]
unique_name_in_owner = true
texture = ExtResource("9_tsuig")

[node name="Flag" type="Sprite2D" parent="."]
position = Vector2(3, -216)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_sd8ak")

[node name="MainNavigationRegion" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
navigation_polygon = SubResource("NavigationPolygon_s2qvn")

[node name="NavigationBridgeW" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1212, 10)
navigation_polygon = SubResource("NavigationPolygon_k8b3u")

[node name="NavigationBridgeSW" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(-641, 589)
navigation_polygon = SubResource("NavigationPolygon_u22nc")

[node name="NavigationBridgeSE" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(641, 566)
navigation_polygon = SubResource("NavigationPolygon_2tewc")

[node name="NavigationBridgeE" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(1150, 0)
navigation_polygon = SubResource("NavigationPolygon_p1ha7")

[node name="NavigationBridgeNE" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(632, -701)
navigation_polygon = SubResource("NavigationPolygon_r62wl")

[node name="NavigationBridgeNW" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(-640, -696)
navigation_polygon = SubResource("NavigationPolygon_binnr")

[node name="BuildingsArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="BuildingsArea"]
polygon = PackedVector2Array(0, -1075, -72, -1061, -232, -985, -374, -889, -479, -823, -592, -787, -952, -626, -1135, -493, -1244, -383, -1325, -250, -1369, -163, -1374, 147, -1316, 217, -1185, 323, -912, 455, -599, 580, -462, 627, -298, 655, -152, 668, -48, 665, 0, 656, 0, 1200, -1500, 600, -1500, -600, 0, -1200)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="BuildingsArea"]
polygon = PackedVector2Array(0, -1200, 1500, -600, 1500, 600, 0, 1200, 0, 657, 159, 619, 320, 576, 370, 564, 595, 517, 896, 392, 994, 330, 1191, 148, 1377, -162, 1432, -398, 1427, -464, 1365, -561, 1265, -627, 1182, -646, 1115, -651, 1069, -658, 903, -694, 589, -806, 487, -834, 248, -975, 91, -1070, 40, -1081, 0, -1075)
metadata/_edit_lock_ = true

[node name="CustomProgressBar" parent="." instance=ExtResource("11_wvh4n")]
visible = false
offset_left = -128.0
offset_top = 14.0
offset_right = 122.0
offset_bottom = 44.0

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -353.0
offset_top = -537.0
offset_right = 354.0
offset_bottom = -458.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="BuildingLimitIcon" type="TextureRect" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("12_i5kjb")
expand_mode = 3
stretch_mode = 5

[node name="BuildingLimitLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "3/3"

[node name="IslandBonusIcon" type="TextureRect" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("13_qmv15")
expand_mode = 3
stretch_mode = 5

[node name="IslandBonusLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "+20%"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_swhxk")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 1200, -1500, 600, -1500, -600, 0, -1200, 1500, -600, 1500, 600)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
